// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Icon Icon 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD fwiOPE"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="accessTime"
        mr="20px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
        <path
          d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          accessTime
        </b>
        "&gt;
      </code>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD fwiOPE"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="add"
        mr="20px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          add
        </b>
        "&gt;
      </code>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD fwiOPE"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="addCircleOutline"
        mr="20px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M13 7h-2v4H7v2h4v4h2v-4h4v-2h-4V7zm-1-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
        />
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          addCircleOutline
        </b>
        "&gt;
      </code>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD fwiOPE"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="block"
        mr="20px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM4 12c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L5.69 16.9C4.63 15.55 4 13.85 4 12zm8 8c-1.85 0-3.55-.63-4.9-1.69L18.31 7.1C19.37 8.45 20 10.15 20 12c0 4.42-3.58 8-8 8z"
        />
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          block
        </b>
        "&gt;
      </code>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD fwiOPE"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="building"
        mr="20px"
        viewBox="0 0 48 48"
        width="24px"
      >
        <path
          d="M24 14V6H4v36h40V14H24zM12 38H8v-4h4v4zm0-8H8v-4h4v4zm0-8H8v-4h4v4zm0-8H8v-4h4v4zm8 24h-4v-4h4v4zm0-8h-4v-4h4v4zm0-8h-4v-4h4v4zm0-8h-4v-4h4v4zm20 24H24v-4h4v-4h-4v-4h4v-4h-4v-4h16v20zm-4-16h-4v4h4v-4zm0 8h-4v4h4v-4z"
        />
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          building
        </b>
        "&gt;
      </code>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD fwiOPE"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="calendarToday"
        mr="20px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M22 3h-3V1h-2v2H7V1H5v2H2v20h20V3zm-2 18H4V8h16v13z"
        />
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          calendarToday
        </b>
        "&gt;
      </code>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD fwiOPE"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="cancel"
        mr="20px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
        />
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          cancel
        </b>
        "&gt;
      </code>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD fwiOPE"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="check"
        mr="20px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          check
        </b>
        "&gt;
      </code>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD fwiOPE"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="checkCircleOutline"
        mr="20px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M16.59 7.58L10 14.17l-3.59-3.58L5 12l5 5 8-8zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          checkCircleOutline
        </b>
        "&gt;
      </code>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD fwiOPE"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="close"
        mr="20px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          close
        </b>
        "&gt;
      </code>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD fwiOPE"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="delete"
        mr="20px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
        />
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          delete
        </b>
        "&gt;
      </code>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD fwiOPE"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="downArrow"
        mr="20px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
        />
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          downArrow
        </b>
        "&gt;
      </code>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD fwiOPE"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="drag"
        mr="20px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          drag
        </b>
        "&gt;
      </code>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD fwiOPE"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="edit"
        mr="20px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
        />
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          edit
        </b>
        "&gt;
      </code>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD fwiOPE"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="error"
        mr="20px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          error
        </b>
        "&gt;
      </code>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD fwiOPE"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="errorFilled"
        mr="20px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
        />
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          errorFilled
        </b>
        "&gt;
      </code>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD fwiOPE"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="filter"
        mr="20px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
        />
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          filter
        </b>
        "&gt;
      </code>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD fwiOPE"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="getApp"
        mr="20px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
        />
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          getApp
        </b>
        "&gt;
      </code>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD fwiOPE"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="help"
        mr="20px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
        />
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          help
        </b>
        "&gt;
      </code>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD fwiOPE"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="leftArrow"
        mr="20px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
        />
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          leftArrow
        </b>
        "&gt;
      </code>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD fwiOPE"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="lock"
        mr="20px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
        />
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          lock
        </b>
        "&gt;
      </code>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD fwiOPE"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="menu"
        mr="20px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
        />
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          menu
        </b>
        "&gt;
      </code>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD fwiOPE"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="more"
        mr="20px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          more
        </b>
        "&gt;
      </code>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD fwiOPE"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="print"
        mr="20px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M19 8H5c-1.66 0-3 1.34-3 3v6h4v4h12v-4h4v-6c0-1.66-1.34-3-3-3zm-3 11H8v-5h8v5zm3-7c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm-1-9H6v4h12V3z"
        />
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          print
        </b>
        "&gt;
      </code>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD fwiOPE"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="publish"
        mr="20px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M5 4v2h14V4H5zm0 10h4v6h6v-6h4l-7-7-7 7z"
        />
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          publish
        </b>
        "&gt;
      </code>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD fwiOPE"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="queryBuilder"
        mr="20px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          queryBuilder
        </b>
        "&gt;
      </code>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD fwiOPE"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="refresh"
        mr="20px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
        />
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          refresh
        </b>
        "&gt;
      </code>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD fwiOPE"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="removeCircleOutline"
        mr="20px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M7 11v2h10v-2H7zm5-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
        />
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          removeCircleOutline
        </b>
        "&gt;
      </code>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD fwiOPE"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="rightArrow"
        mr="20px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
        />
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          rightArrow
        </b>
        "&gt;
      </code>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD fwiOPE"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="save"
        mr="20px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M17 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V7l-4-4zm-5 16c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3zm3-10H5V5h10v4z"
        />
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          save
        </b>
        "&gt;
      </code>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD fwiOPE"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="search"
        mr="20px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          search
        </b>
        "&gt;
      </code>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD fwiOPE"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="settings"
        mr="20px"
        viewBox="0 0 20 20"
        width="24px"
      >
        <path
          d="M15.95 10.78c.03-.25.05-.51.05-.78s-.02-.53-.06-.78l1.69-1.32c.15-.12.19-.34.1-.51l-1.6-2.77c-.1-.18-.31-.24-.49-.18l-1.99.8c-.42-.32-.86-.58-1.35-.78L12 2.34c-.03-.2-.2-.34-.4-.34H8.4c-.2 0-.36.14-.39.34l-.3 2.12c-.49.2-.94.47-1.35.78l-1.99-.8c-.18-.07-.39 0-.49.18l-1.6 2.77c-.1.18-.06.39.1.51l1.69 1.32c-.04.25-.07.52-.07.78s.02.53.06.78L2.37 12.1c-.15.12-.19.34-.1.51l1.6 2.77c.1.18.31.24.49.18l1.99-.8c.42.32.86.58 1.35.78l.3 2.12c.04.2.2.34.4.34h3.2c.2 0 .37-.14.39-.34l.3-2.12c.49-.2.94-.47 1.35-.78l1.99.8c.18.07.39 0 .49-.18l1.6-2.77c.1-.18.06-.39-.1-.51l-1.67-1.32zM10 13c-1.65 0-3-1.35-3-3s1.35-3 3-3 3 1.35 3 3-1.35 3-3 3z"
        />
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          settings
        </b>
        "&gt;
      </code>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD fwiOPE"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="sortDown"
        mr="20px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
        />
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          sortDown
        </b>
        "&gt;
      </code>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD fwiOPE"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="sortUp"
        mr="20px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M4 12l1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z"
        />
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          sortUp
        </b>
        "&gt;
      </code>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD fwiOPE"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="unlock"
        mr="20px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M12 17c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm6-9h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6h1.9c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm0 12H6V10h12v10z"
        />
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          unlock
        </b>
        "&gt;
      </code>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD fwiOPE"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="upArrow"
        mr="20px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
        />
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          upArrow
        </b>
        "&gt;
      </code>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD fwiOPE"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="user"
        mr="20px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
        />
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          user
        </b>
        "&gt;
      </code>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD fwiOPE"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="zoomIn"
        mr="20px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
        <path
          d="M12 10h-2v2H9v-2H7V9h2V7h1v2h2v1z"
        />
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          zoomIn
        </b>
        "&gt;
      </code>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD fwiOPE"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="zoomOut"
        mr="20px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14zM7 9h5v1H7z"
        />
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          zoomOut
        </b>
        "&gt;
      </code>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC eJLKpo"
    >
      <svg
        class="sc-AykKD fwiOPE"
        focusable="false"
        height="24px"
        icon="loading"
        mr="20px"
        viewBox="0 0 38 38"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <linearGradient
            id="random-id-1"
            x1="8.042%"
            x2="65.682%"
            y1="0%"
            y2="23.865%"
          >
            <stop
              offset="0%"
              stop-color="currentColor"
              stop-opacity="0"
            />
            <stop
              offset="63.146%"
              stop-color="currentColor"
              stop-opacity=".631"
            />
            <stop
              offset="100%"
              stop-color="currentColor"
            />
          </linearGradient>
        </defs>
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <g
            transform="translate(1 1)"
          >
            <path
              d="M36 18c0-9.94-8.06-18-18-18"
              id="Oval-2"
              stroke="url(#random-id-1)"
              stroke-width="2"
            >
              <animateTransform
                attributeName="transform"
                dur="0.9s"
                from="0 18 18"
                repeatCount="indefinite"
                to="360 18 18"
                type="rotate"
              />
            </path>
            <circle
              cx="36"
              cy="18"
              fill="currentColor"
              r="1"
            >
              <animateTransform
                attributeName="transform"
                dur="0.9s"
                from="0 18 18"
                repeatCount="indefinite"
                to="360 18 18"
                type="rotate"
              />
            </circle>
          </g>
        </g>
      </svg>
      <code>
        &lt;Icon icon="
        <b>
          loading
        </b>
        "&gt;
      </code>
    </div>
  </div>
</div>
`;

exports[`Storyshots Icon InlineIcon 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <p
      style="font-size:1em"
    >
      @1em:  
      <span
        class="Icon__IconContainer-fc7twp-0 cKMFdt"
      >
        <svg
          aria-hidden="true"
          class="sc-AykKE hrqlIQ"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="1.25em"
          icon="accessTime"
          viewBox="0 0 24 24"
          width="1.25em"
        >
          <path
            d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
          <path
            d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
          />
        </svg>
      </span>
      <span
        class="Icon__IconContainer-fc7twp-0 cKMFdt"
      >
        <svg
          aria-hidden="true"
          class="sc-AykKE hrqlIQ"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="1.25em"
          icon="add"
          viewBox="0 0 24 24"
          width="1.25em"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
      </span>
      <span
        class="Icon__IconContainer-fc7twp-0 cKMFdt"
      >
        <svg
          aria-hidden="true"
          class="sc-AykKE hrqlIQ"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="1.25em"
          icon="addCircleOutline"
          viewBox="0 0 24 24"
          width="1.25em"
        >
          <path
            d="M13 7h-2v4H7v2h4v4h2v-4h4v-2h-4V7zm-1-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
          />
        </svg>
      </span>
      <span
        class="Icon__IconContainer-fc7twp-0 cKMFdt"
      >
        <svg
          aria-hidden="true"
          class="sc-AykKE hrqlIQ"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="1.25em"
          icon="block"
          viewBox="0 0 24 24"
          width="1.25em"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM4 12c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L5.69 16.9C4.63 15.55 4 13.85 4 12zm8 8c-1.85 0-3.55-.63-4.9-1.69L18.31 7.1C19.37 8.45 20 10.15 20 12c0 4.42-3.58 8-8 8z"
          />
        </svg>
      </span>
      <span
        class="Icon__IconContainer-fc7twp-0 cKMFdt"
      >
        <svg
          aria-hidden="true"
          class="sc-AykKE hrqlIQ"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="1.25em"
          icon="building"
          viewBox="0 0 48 48"
          width="1.25em"
        >
          <path
            d="M24 14V6H4v36h40V14H24zM12 38H8v-4h4v4zm0-8H8v-4h4v4zm0-8H8v-4h4v4zm0-8H8v-4h4v4zm8 24h-4v-4h4v4zm0-8h-4v-4h4v4zm0-8h-4v-4h4v4zm0-8h-4v-4h4v4zm20 24H24v-4h4v-4h-4v-4h4v-4h-4v-4h16v20zm-4-16h-4v4h4v-4zm0 8h-4v4h4v-4z"
          />
        </svg>
      </span>
      <span
        class="Icon__IconContainer-fc7twp-0 cKMFdt"
      >
        <svg
          class="sc-AykKE hrqlIQ"
          focusable="false"
          height="1.25em"
          icon="loading"
          viewBox="0 0 38 38"
          width="1.25em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs>
            <linearGradient
              id="random-id-2"
              x1="8.042%"
              x2="65.682%"
              y1="0%"
              y2="23.865%"
            >
              <stop
                offset="0%"
                stop-color="currentColor"
                stop-opacity="0"
              />
              <stop
                offset="63.146%"
                stop-color="currentColor"
                stop-opacity=".631"
              />
              <stop
                offset="100%"
                stop-color="currentColor"
              />
            </linearGradient>
          </defs>
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <g
              transform="translate(1 1)"
            >
              <path
                d="M36 18c0-9.94-8.06-18-18-18"
                id="Oval-2"
                stroke="url(#random-id-2)"
                stroke-width="2"
              >
                <animateTransform
                  attributeName="transform"
                  dur="0.9s"
                  from="0 18 18"
                  repeatCount="indefinite"
                  to="360 18 18"
                  type="rotate"
                />
              </path>
              <circle
                cx="36"
                cy="18"
                fill="currentColor"
                r="1"
              >
                <animateTransform
                  attributeName="transform"
                  dur="0.9s"
                  from="0 18 18"
                  repeatCount="indefinite"
                  to="360 18 18"
                  type="rotate"
                />
              </circle>
            </g>
          </g>
        </svg>
      </span>
    </p>
    <p
      style="font-size:2em"
    >
      @2em:  
      <span
        class="Icon__IconContainer-fc7twp-0 cKMFdt"
      >
        <svg
          aria-hidden="true"
          class="sc-AykKE hrqlIQ"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="1.25em"
          icon="accessTime"
          viewBox="0 0 24 24"
          width="1.25em"
        >
          <path
            d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
          <path
            d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
          />
        </svg>
      </span>
      <span
        class="Icon__IconContainer-fc7twp-0 cKMFdt"
      >
        <svg
          aria-hidden="true"
          class="sc-AykKE hrqlIQ"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="1.25em"
          icon="add"
          viewBox="0 0 24 24"
          width="1.25em"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
      </span>
      <span
        class="Icon__IconContainer-fc7twp-0 cKMFdt"
      >
        <svg
          aria-hidden="true"
          class="sc-AykKE hrqlIQ"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="1.25em"
          icon="addCircleOutline"
          viewBox="0 0 24 24"
          width="1.25em"
        >
          <path
            d="M13 7h-2v4H7v2h4v4h2v-4h4v-2h-4V7zm-1-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
          />
        </svg>
      </span>
      <span
        class="Icon__IconContainer-fc7twp-0 cKMFdt"
      >
        <svg
          aria-hidden="true"
          class="sc-AykKE hrqlIQ"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="1.25em"
          icon="block"
          viewBox="0 0 24 24"
          width="1.25em"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM4 12c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L5.69 16.9C4.63 15.55 4 13.85 4 12zm8 8c-1.85 0-3.55-.63-4.9-1.69L18.31 7.1C19.37 8.45 20 10.15 20 12c0 4.42-3.58 8-8 8z"
          />
        </svg>
      </span>
      <span
        class="Icon__IconContainer-fc7twp-0 cKMFdt"
      >
        <svg
          aria-hidden="true"
          class="sc-AykKE hrqlIQ"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="1.25em"
          icon="building"
          viewBox="0 0 48 48"
          width="1.25em"
        >
          <path
            d="M24 14V6H4v36h40V14H24zM12 38H8v-4h4v4zm0-8H8v-4h4v4zm0-8H8v-4h4v4zm0-8H8v-4h4v4zm8 24h-4v-4h4v4zm0-8h-4v-4h4v4zm0-8h-4v-4h4v4zm0-8h-4v-4h4v4zm20 24H24v-4h4v-4h-4v-4h4v-4h-4v-4h16v20zm-4-16h-4v4h4v-4zm0 8h-4v4h4v-4z"
          />
        </svg>
      </span>
      <span
        class="Icon__IconContainer-fc7twp-0 cKMFdt"
      >
        <svg
          class="sc-AykKE hrqlIQ"
          focusable="false"
          height="1.25em"
          icon="loading"
          viewBox="0 0 38 38"
          width="1.25em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs>
            <linearGradient
              id="random-id-3"
              x1="8.042%"
              x2="65.682%"
              y1="0%"
              y2="23.865%"
            >
              <stop
                offset="0%"
                stop-color="currentColor"
                stop-opacity="0"
              />
              <stop
                offset="63.146%"
                stop-color="currentColor"
                stop-opacity=".631"
              />
              <stop
                offset="100%"
                stop-color="currentColor"
              />
            </linearGradient>
          </defs>
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <g
              transform="translate(1 1)"
            >
              <path
                d="M36 18c0-9.94-8.06-18-18-18"
                id="Oval-2"
                stroke="url(#random-id-3)"
                stroke-width="2"
              >
                <animateTransform
                  attributeName="transform"
                  dur="0.9s"
                  from="0 18 18"
                  repeatCount="indefinite"
                  to="360 18 18"
                  type="rotate"
                />
              </path>
              <circle
                cx="36"
                cy="18"
                fill="currentColor"
                r="1"
              >
                <animateTransform
                  attributeName="transform"
                  dur="0.9s"
                  from="0 18 18"
                  repeatCount="indefinite"
                  to="360 18 18"
                  type="rotate"
                />
              </circle>
            </g>
          </g>
        </svg>
      </span>
    </p>
    <p
      style="font-size:3em"
    >
      @3em:  
      <span
        class="Icon__IconContainer-fc7twp-0 cKMFdt"
      >
        <svg
          aria-hidden="true"
          class="sc-AykKE hrqlIQ"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="1.25em"
          icon="accessTime"
          viewBox="0 0 24 24"
          width="1.25em"
        >
          <path
            d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
          <path
            d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
          />
        </svg>
      </span>
      <span
        class="Icon__IconContainer-fc7twp-0 cKMFdt"
      >
        <svg
          aria-hidden="true"
          class="sc-AykKE hrqlIQ"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="1.25em"
          icon="add"
          viewBox="0 0 24 24"
          width="1.25em"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
      </span>
      <span
        class="Icon__IconContainer-fc7twp-0 cKMFdt"
      >
        <svg
          aria-hidden="true"
          class="sc-AykKE hrqlIQ"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="1.25em"
          icon="addCircleOutline"
          viewBox="0 0 24 24"
          width="1.25em"
        >
          <path
            d="M13 7h-2v4H7v2h4v4h2v-4h4v-2h-4V7zm-1-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
          />
        </svg>
      </span>
      <span
        class="Icon__IconContainer-fc7twp-0 cKMFdt"
      >
        <svg
          aria-hidden="true"
          class="sc-AykKE hrqlIQ"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="1.25em"
          icon="block"
          viewBox="0 0 24 24"
          width="1.25em"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM4 12c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L5.69 16.9C4.63 15.55 4 13.85 4 12zm8 8c-1.85 0-3.55-.63-4.9-1.69L18.31 7.1C19.37 8.45 20 10.15 20 12c0 4.42-3.58 8-8 8z"
          />
        </svg>
      </span>
      <span
        class="Icon__IconContainer-fc7twp-0 cKMFdt"
      >
        <svg
          aria-hidden="true"
          class="sc-AykKE hrqlIQ"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="1.25em"
          icon="building"
          viewBox="0 0 48 48"
          width="1.25em"
        >
          <path
            d="M24 14V6H4v36h40V14H24zM12 38H8v-4h4v4zm0-8H8v-4h4v4zm0-8H8v-4h4v4zm0-8H8v-4h4v4zm8 24h-4v-4h4v4zm0-8h-4v-4h4v4zm0-8h-4v-4h4v4zm0-8h-4v-4h4v4zm20 24H24v-4h4v-4h-4v-4h4v-4h-4v-4h16v20zm-4-16h-4v4h4v-4zm0 8h-4v4h4v-4z"
          />
        </svg>
      </span>
      <span
        class="Icon__IconContainer-fc7twp-0 cKMFdt"
      >
        <svg
          class="sc-AykKE hrqlIQ"
          focusable="false"
          height="1.25em"
          icon="loading"
          viewBox="0 0 38 38"
          width="1.25em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs>
            <linearGradient
              id="random-id-4"
              x1="8.042%"
              x2="65.682%"
              y1="0%"
              y2="23.865%"
            >
              <stop
                offset="0%"
                stop-color="currentColor"
                stop-opacity="0"
              />
              <stop
                offset="63.146%"
                stop-color="currentColor"
                stop-opacity=".631"
              />
              <stop
                offset="100%"
                stop-color="currentColor"
              />
            </linearGradient>
          </defs>
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <g
              transform="translate(1 1)"
            >
              <path
                d="M36 18c0-9.94-8.06-18-18-18"
                id="Oval-2"
                stroke="url(#random-id-4)"
                stroke-width="2"
              >
                <animateTransform
                  attributeName="transform"
                  dur="0.9s"
                  from="0 18 18"
                  repeatCount="indefinite"
                  to="360 18 18"
                  type="rotate"
                />
              </path>
              <circle
                cx="36"
                cy="18"
                fill="currentColor"
                r="1"
              >
                <animateTransform
                  attributeName="transform"
                  dur="0.9s"
                  from="0 18 18"
                  repeatCount="indefinite"
                  to="360 18 18"
                  type="rotate"
                />
              </circle>
            </g>
          </g>
        </svg>
      </span>
    </p>
    <p
      style="font-size:4em"
    >
      @4em:  
      <span
        class="Icon__IconContainer-fc7twp-0 cKMFdt"
      >
        <svg
          aria-hidden="true"
          class="sc-AykKE hrqlIQ"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="1.25em"
          icon="accessTime"
          viewBox="0 0 24 24"
          width="1.25em"
        >
          <path
            d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
          <path
            d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
          />
        </svg>
      </span>
      <span
        class="Icon__IconContainer-fc7twp-0 cKMFdt"
      >
        <svg
          aria-hidden="true"
          class="sc-AykKE hrqlIQ"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="1.25em"
          icon="add"
          viewBox="0 0 24 24"
          width="1.25em"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
      </span>
      <span
        class="Icon__IconContainer-fc7twp-0 cKMFdt"
      >
        <svg
          aria-hidden="true"
          class="sc-AykKE hrqlIQ"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="1.25em"
          icon="addCircleOutline"
          viewBox="0 0 24 24"
          width="1.25em"
        >
          <path
            d="M13 7h-2v4H7v2h4v4h2v-4h4v-2h-4V7zm-1-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
          />
        </svg>
      </span>
      <span
        class="Icon__IconContainer-fc7twp-0 cKMFdt"
      >
        <svg
          aria-hidden="true"
          class="sc-AykKE hrqlIQ"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="1.25em"
          icon="block"
          viewBox="0 0 24 24"
          width="1.25em"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM4 12c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L5.69 16.9C4.63 15.55 4 13.85 4 12zm8 8c-1.85 0-3.55-.63-4.9-1.69L18.31 7.1C19.37 8.45 20 10.15 20 12c0 4.42-3.58 8-8 8z"
          />
        </svg>
      </span>
      <span
        class="Icon__IconContainer-fc7twp-0 cKMFdt"
      >
        <svg
          aria-hidden="true"
          class="sc-AykKE hrqlIQ"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="1.25em"
          icon="building"
          viewBox="0 0 48 48"
          width="1.25em"
        >
          <path
            d="M24 14V6H4v36h40V14H24zM12 38H8v-4h4v4zm0-8H8v-4h4v4zm0-8H8v-4h4v4zm0-8H8v-4h4v4zm8 24h-4v-4h4v4zm0-8h-4v-4h4v4zm0-8h-4v-4h4v4zm0-8h-4v-4h4v4zm20 24H24v-4h4v-4h-4v-4h4v-4h-4v-4h16v20zm-4-16h-4v4h4v-4zm0 8h-4v4h4v-4z"
          />
        </svg>
      </span>
      <span
        class="Icon__IconContainer-fc7twp-0 cKMFdt"
      >
        <svg
          class="sc-AykKE hrqlIQ"
          focusable="false"
          height="1.25em"
          icon="loading"
          viewBox="0 0 38 38"
          width="1.25em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs>
            <linearGradient
              id="random-id-5"
              x1="8.042%"
              x2="65.682%"
              y1="0%"
              y2="23.865%"
            >
              <stop
                offset="0%"
                stop-color="currentColor"
                stop-opacity="0"
              />
              <stop
                offset="63.146%"
                stop-color="currentColor"
                stop-opacity=".631"
              />
              <stop
                offset="100%"
                stop-color="currentColor"
              />
            </linearGradient>
          </defs>
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <g
              transform="translate(1 1)"
            >
              <path
                d="M36 18c0-9.94-8.06-18-18-18"
                id="Oval-2"
                stroke="url(#random-id-5)"
                stroke-width="2"
              >
                <animateTransform
                  attributeName="transform"
                  dur="0.9s"
                  from="0 18 18"
                  repeatCount="indefinite"
                  to="360 18 18"
                  type="rotate"
                />
              </path>
              <circle
                cx="36"
                cy="18"
                fill="currentColor"
                r="1"
              >
                <animateTransform
                  attributeName="transform"
                  dur="0.9s"
                  from="0 18 18"
                  repeatCount="indefinite"
                  to="360 18 18"
                  type="rotate"
                />
              </circle>
            </g>
          </g>
        </svg>
      </span>
    </p>
  </div>
</div>
`;

exports[`Storyshots Icon With a color 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 jgHxgc"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD clTyrU"
        color="#cc1439"
        fill="#cc1439"
        focusable="false"
        height="24px"
        icon="accessTime"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
        <path
          d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="sc-AykKD clTyrU"
        color="#cc1439"
        fill="#cc1439"
        focusable="false"
        height="24px"
        icon="add"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="sc-AykKD clTyrU"
        color="#cc1439"
        fill="#cc1439"
        focusable="false"
        height="24px"
        icon="addCircleOutline"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M13 7h-2v4H7v2h4v4h2v-4h4v-2h-4V7zm-1-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="sc-AykKD clTyrU"
        color="#cc1439"
        fill="#cc1439"
        focusable="false"
        height="24px"
        icon="block"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM4 12c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L5.69 16.9C4.63 15.55 4 13.85 4 12zm8 8c-1.85 0-3.55-.63-4.9-1.69L18.31 7.1C19.37 8.45 20 10.15 20 12c0 4.42-3.58 8-8 8z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="sc-AykKD clTyrU"
        color="#cc1439"
        fill="#cc1439"
        focusable="false"
        height="24px"
        icon="building"
        viewBox="0 0 48 48"
        width="24px"
      >
        <path
          d="M24 14V6H4v36h40V14H24zM12 38H8v-4h4v4zm0-8H8v-4h4v4zm0-8H8v-4h4v4zm0-8H8v-4h4v4zm8 24h-4v-4h4v4zm0-8h-4v-4h4v4zm0-8h-4v-4h4v4zm0-8h-4v-4h4v4zm20 24H24v-4h4v-4h-4v-4h4v-4h-4v-4h16v20zm-4-16h-4v4h4v-4zm0 8h-4v4h4v-4z"
        />
      </svg>
      <svg
        class="sc-AykKD clTyrU"
        focusable="false"
        height="24px"
        icon="loading"
        viewBox="0 0 38 38"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <linearGradient
            id="random-id-6"
            x1="8.042%"
            x2="65.682%"
            y1="0%"
            y2="23.865%"
          >
            <stop
              offset="0%"
              stop-color="#cc1439"
              stop-opacity="0"
            />
            <stop
              offset="63.146%"
              stop-color="#cc1439"
              stop-opacity=".631"
            />
            <stop
              offset="100%"
              stop-color="#cc1439"
            />
          </linearGradient>
        </defs>
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <g
            transform="translate(1 1)"
          >
            <path
              d="M36 18c0-9.94-8.06-18-18-18"
              id="Oval-2"
              stroke="url(#random-id-6)"
              stroke-width="2"
            >
              <animateTransform
                attributeName="transform"
                dur="0.9s"
                from="0 18 18"
                repeatCount="indefinite"
                to="360 18 18"
                type="rotate"
              />
            </path>
            <circle
              cx="36"
              cy="18"
              fill="#cc1439"
              r="1"
            >
              <animateTransform
                attributeName="transform"
                dur="0.9s"
                from="0 18 18"
                repeatCount="indefinite"
                to="360 18 18"
                type="rotate"
              />
            </circle>
          </g>
        </g>
      </svg>
    </div>
    <div
      class="Box-sc-1qu1edy-0 jgHxgc"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD eXzbYd"
        color="#ffbb00"
        fill="#ffbb00"
        focusable="false"
        height="24px"
        icon="accessTime"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
        <path
          d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="sc-AykKD eXzbYd"
        color="#ffbb00"
        fill="#ffbb00"
        focusable="false"
        height="24px"
        icon="add"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="sc-AykKD eXzbYd"
        color="#ffbb00"
        fill="#ffbb00"
        focusable="false"
        height="24px"
        icon="addCircleOutline"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M13 7h-2v4H7v2h4v4h2v-4h4v-2h-4V7zm-1-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="sc-AykKD eXzbYd"
        color="#ffbb00"
        fill="#ffbb00"
        focusable="false"
        height="24px"
        icon="block"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM4 12c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L5.69 16.9C4.63 15.55 4 13.85 4 12zm8 8c-1.85 0-3.55-.63-4.9-1.69L18.31 7.1C19.37 8.45 20 10.15 20 12c0 4.42-3.58 8-8 8z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="sc-AykKD eXzbYd"
        color="#ffbb00"
        fill="#ffbb00"
        focusable="false"
        height="24px"
        icon="building"
        viewBox="0 0 48 48"
        width="24px"
      >
        <path
          d="M24 14V6H4v36h40V14H24zM12 38H8v-4h4v4zm0-8H8v-4h4v4zm0-8H8v-4h4v4zm0-8H8v-4h4v4zm8 24h-4v-4h4v4zm0-8h-4v-4h4v4zm0-8h-4v-4h4v4zm0-8h-4v-4h4v4zm20 24H24v-4h4v-4h-4v-4h4v-4h-4v-4h16v20zm-4-16h-4v4h4v-4zm0 8h-4v4h4v-4z"
        />
      </svg>
      <svg
        class="sc-AykKD eXzbYd"
        focusable="false"
        height="24px"
        icon="loading"
        viewBox="0 0 38 38"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <linearGradient
            id="random-id-7"
            x1="8.042%"
            x2="65.682%"
            y1="0%"
            y2="23.865%"
          >
            <stop
              offset="0%"
              stop-color="#ffbb00"
              stop-opacity="0"
            />
            <stop
              offset="63.146%"
              stop-color="#ffbb00"
              stop-opacity=".631"
            />
            <stop
              offset="100%"
              stop-color="#ffbb00"
            />
          </linearGradient>
        </defs>
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <g
            transform="translate(1 1)"
          >
            <path
              d="M36 18c0-9.94-8.06-18-18-18"
              id="Oval-2"
              stroke="url(#random-id-7)"
              stroke-width="2"
            >
              <animateTransform
                attributeName="transform"
                dur="0.9s"
                from="0 18 18"
                repeatCount="indefinite"
                to="360 18 18"
                type="rotate"
              />
            </path>
            <circle
              cx="36"
              cy="18"
              fill="#ffbb00"
              r="1"
            >
              <animateTransform
                attributeName="transform"
                dur="0.9s"
                from="0 18 18"
                repeatCount="indefinite"
                to="360 18 18"
                type="rotate"
              />
            </circle>
          </g>
        </g>
      </svg>
    </div>
    <div
      class="Box-sc-1qu1edy-0 jgHxgc"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD eGOLD"
        color="#008059"
        fill="#008059"
        focusable="false"
        height="24px"
        icon="accessTime"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
        <path
          d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="sc-AykKD eGOLD"
        color="#008059"
        fill="#008059"
        focusable="false"
        height="24px"
        icon="add"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="sc-AykKD eGOLD"
        color="#008059"
        fill="#008059"
        focusable="false"
        height="24px"
        icon="addCircleOutline"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M13 7h-2v4H7v2h4v4h2v-4h4v-2h-4V7zm-1-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="sc-AykKD eGOLD"
        color="#008059"
        fill="#008059"
        focusable="false"
        height="24px"
        icon="block"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM4 12c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L5.69 16.9C4.63 15.55 4 13.85 4 12zm8 8c-1.85 0-3.55-.63-4.9-1.69L18.31 7.1C19.37 8.45 20 10.15 20 12c0 4.42-3.58 8-8 8z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="sc-AykKD eGOLD"
        color="#008059"
        fill="#008059"
        focusable="false"
        height="24px"
        icon="building"
        viewBox="0 0 48 48"
        width="24px"
      >
        <path
          d="M24 14V6H4v36h40V14H24zM12 38H8v-4h4v4zm0-8H8v-4h4v4zm0-8H8v-4h4v4zm0-8H8v-4h4v4zm8 24h-4v-4h4v4zm0-8h-4v-4h4v4zm0-8h-4v-4h4v4zm0-8h-4v-4h4v4zm20 24H24v-4h4v-4h-4v-4h4v-4h-4v-4h16v20zm-4-16h-4v4h4v-4zm0 8h-4v4h4v-4z"
        />
      </svg>
      <svg
        class="sc-AykKD eGOLD"
        focusable="false"
        height="24px"
        icon="loading"
        viewBox="0 0 38 38"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <linearGradient
            id="random-id-8"
            x1="8.042%"
            x2="65.682%"
            y1="0%"
            y2="23.865%"
          >
            <stop
              offset="0%"
              stop-color="#008059"
              stop-opacity="0"
            />
            <stop
              offset="63.146%"
              stop-color="#008059"
              stop-opacity=".631"
            />
            <stop
              offset="100%"
              stop-color="#008059"
            />
          </linearGradient>
        </defs>
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <g
            transform="translate(1 1)"
          >
            <path
              d="M36 18c0-9.94-8.06-18-18-18"
              id="Oval-2"
              stroke="url(#random-id-8)"
              stroke-width="2"
            >
              <animateTransform
                attributeName="transform"
                dur="0.9s"
                from="0 18 18"
                repeatCount="indefinite"
                to="360 18 18"
                type="rotate"
              />
            </path>
            <circle
              cx="36"
              cy="18"
              fill="#008059"
              r="1"
            >
              <animateTransform
                attributeName="transform"
                dur="0.9s"
                from="0 18 18"
                repeatCount="indefinite"
                to="360 18 18"
                type="rotate"
              />
            </circle>
          </g>
        </g>
      </svg>
    </div>
    <div
      class="Box-sc-1qu1edy-0 jgHxgc"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD kbaGLP"
        color="#216beb"
        fill="#216beb"
        focusable="false"
        height="24px"
        icon="accessTime"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
        <path
          d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="sc-AykKD kbaGLP"
        color="#216beb"
        fill="#216beb"
        focusable="false"
        height="24px"
        icon="add"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="sc-AykKD kbaGLP"
        color="#216beb"
        fill="#216beb"
        focusable="false"
        height="24px"
        icon="addCircleOutline"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M13 7h-2v4H7v2h4v4h2v-4h4v-2h-4V7zm-1-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="sc-AykKD kbaGLP"
        color="#216beb"
        fill="#216beb"
        focusable="false"
        height="24px"
        icon="block"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM4 12c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L5.69 16.9C4.63 15.55 4 13.85 4 12zm8 8c-1.85 0-3.55-.63-4.9-1.69L18.31 7.1C19.37 8.45 20 10.15 20 12c0 4.42-3.58 8-8 8z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="sc-AykKD kbaGLP"
        color="#216beb"
        fill="#216beb"
        focusable="false"
        height="24px"
        icon="building"
        viewBox="0 0 48 48"
        width="24px"
      >
        <path
          d="M24 14V6H4v36h40V14H24zM12 38H8v-4h4v4zm0-8H8v-4h4v4zm0-8H8v-4h4v4zm0-8H8v-4h4v4zm8 24h-4v-4h4v4zm0-8h-4v-4h4v4zm0-8h-4v-4h4v4zm0-8h-4v-4h4v4zm20 24H24v-4h4v-4h-4v-4h4v-4h-4v-4h16v20zm-4-16h-4v4h4v-4zm0 8h-4v4h4v-4z"
        />
      </svg>
      <svg
        class="sc-AykKD kbaGLP"
        focusable="false"
        height="24px"
        icon="loading"
        viewBox="0 0 38 38"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <linearGradient
            id="random-id-9"
            x1="8.042%"
            x2="65.682%"
            y1="0%"
            y2="23.865%"
          >
            <stop
              offset="0%"
              stop-color="#216beb"
              stop-opacity="0"
            />
            <stop
              offset="63.146%"
              stop-color="#216beb"
              stop-opacity=".631"
            />
            <stop
              offset="100%"
              stop-color="#216beb"
            />
          </linearGradient>
        </defs>
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <g
            transform="translate(1 1)"
          >
            <path
              d="M36 18c0-9.94-8.06-18-18-18"
              id="Oval-2"
              stroke="url(#random-id-9)"
              stroke-width="2"
            >
              <animateTransform
                attributeName="transform"
                dur="0.9s"
                from="0 18 18"
                repeatCount="indefinite"
                to="360 18 18"
                type="rotate"
              />
            </path>
            <circle
              cx="36"
              cy="18"
              fill="#216beb"
              r="1"
            >
              <animateTransform
                attributeName="transform"
                dur="0.9s"
                from="0 18 18"
                repeatCount="indefinite"
                to="360 18 18"
                type="rotate"
              />
            </circle>
          </g>
        </g>
      </svg>
    </div>
    <div
      class="Box-sc-1qu1edy-0 jgHxgc"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD aLmVb"
        color="#122b47"
        fill="#122b47"
        focusable="false"
        height="24px"
        icon="accessTime"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
        <path
          d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="sc-AykKD aLmVb"
        color="#122b47"
        fill="#122b47"
        focusable="false"
        height="24px"
        icon="add"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="sc-AykKD aLmVb"
        color="#122b47"
        fill="#122b47"
        focusable="false"
        height="24px"
        icon="addCircleOutline"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M13 7h-2v4H7v2h4v4h2v-4h4v-2h-4V7zm-1-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="sc-AykKD aLmVb"
        color="#122b47"
        fill="#122b47"
        focusable="false"
        height="24px"
        icon="block"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM4 12c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L5.69 16.9C4.63 15.55 4 13.85 4 12zm8 8c-1.85 0-3.55-.63-4.9-1.69L18.31 7.1C19.37 8.45 20 10.15 20 12c0 4.42-3.58 8-8 8z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="sc-AykKD aLmVb"
        color="#122b47"
        fill="#122b47"
        focusable="false"
        height="24px"
        icon="building"
        viewBox="0 0 48 48"
        width="24px"
      >
        <path
          d="M24 14V6H4v36h40V14H24zM12 38H8v-4h4v4zm0-8H8v-4h4v4zm0-8H8v-4h4v4zm0-8H8v-4h4v4zm8 24h-4v-4h4v4zm0-8h-4v-4h4v4zm0-8h-4v-4h4v4zm0-8h-4v-4h4v4zm20 24H24v-4h4v-4h-4v-4h4v-4h-4v-4h16v20zm-4-16h-4v4h4v-4zm0 8h-4v4h4v-4z"
        />
      </svg>
      <svg
        class="sc-AykKD aLmVb"
        focusable="false"
        height="24px"
        icon="loading"
        viewBox="0 0 38 38"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <linearGradient
            id="random-id-10"
            x1="8.042%"
            x2="65.682%"
            y1="0%"
            y2="23.865%"
          >
            <stop
              offset="0%"
              stop-color="#122b47"
              stop-opacity="0"
            />
            <stop
              offset="63.146%"
              stop-color="#122b47"
              stop-opacity=".631"
            />
            <stop
              offset="100%"
              stop-color="#122b47"
            />
          </linearGradient>
        </defs>
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <g
            transform="translate(1 1)"
          >
            <path
              d="M36 18c0-9.94-8.06-18-18-18"
              id="Oval-2"
              stroke="url(#random-id-10)"
              stroke-width="2"
            >
              <animateTransform
                attributeName="transform"
                dur="0.9s"
                from="0 18 18"
                repeatCount="indefinite"
                to="360 18 18"
                type="rotate"
              />
            </path>
            <circle
              cx="36"
              cy="18"
              fill="#122b47"
              r="1"
            >
              <animateTransform
                attributeName="transform"
                dur="0.9s"
                from="0 18 18"
                repeatCount="indefinite"
                to="360 18 18"
                type="rotate"
              />
            </circle>
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Icon With a size 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 jgHxgc"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD eBQUbO"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="8px"
        icon="accessTime"
        viewBox="0 0 24 24"
        width="8px"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
        <path
          d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="sc-AykKD eBQUbO"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="8px"
        icon="add"
        viewBox="0 0 24 24"
        width="8px"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="sc-AykKD eBQUbO"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="8px"
        icon="addCircleOutline"
        viewBox="0 0 24 24"
        width="8px"
      >
        <path
          d="M13 7h-2v4H7v2h4v4h2v-4h4v-2h-4V7zm-1-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="sc-AykKD eBQUbO"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="8px"
        icon="block"
        viewBox="0 0 24 24"
        width="8px"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM4 12c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L5.69 16.9C4.63 15.55 4 13.85 4 12zm8 8c-1.85 0-3.55-.63-4.9-1.69L18.31 7.1C19.37 8.45 20 10.15 20 12c0 4.42-3.58 8-8 8z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="sc-AykKD eBQUbO"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="8px"
        icon="building"
        viewBox="0 0 48 48"
        width="8px"
      >
        <path
          d="M24 14V6H4v36h40V14H24zM12 38H8v-4h4v4zm0-8H8v-4h4v4zm0-8H8v-4h4v4zm0-8H8v-4h4v4zm8 24h-4v-4h4v4zm0-8h-4v-4h4v4zm0-8h-4v-4h4v4zm0-8h-4v-4h4v4zm20 24H24v-4h4v-4h-4v-4h4v-4h-4v-4h16v20zm-4-16h-4v4h4v-4zm0 8h-4v4h4v-4z"
        />
      </svg>
      <svg
        class="sc-AykKD eBQUbO"
        focusable="false"
        height="8px"
        icon="loading"
        viewBox="0 0 38 38"
        width="8px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <linearGradient
            id="random-id-11"
            x1="8.042%"
            x2="65.682%"
            y1="0%"
            y2="23.865%"
          >
            <stop
              offset="0%"
              stop-color="currentColor"
              stop-opacity="0"
            />
            <stop
              offset="63.146%"
              stop-color="currentColor"
              stop-opacity=".631"
            />
            <stop
              offset="100%"
              stop-color="currentColor"
            />
          </linearGradient>
        </defs>
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <g
            transform="translate(1 1)"
          >
            <path
              d="M36 18c0-9.94-8.06-18-18-18"
              id="Oval-2"
              stroke="url(#random-id-11)"
              stroke-width="2"
            >
              <animateTransform
                attributeName="transform"
                dur="0.9s"
                from="0 18 18"
                repeatCount="indefinite"
                to="360 18 18"
                type="rotate"
              />
            </path>
            <circle
              cx="36"
              cy="18"
              fill="currentColor"
              r="1"
            >
              <animateTransform
                attributeName="transform"
                dur="0.9s"
                from="0 18 18"
                repeatCount="indefinite"
                to="360 18 18"
                type="rotate"
              />
            </circle>
          </g>
        </g>
      </svg>
    </div>
    <div
      class="Box-sc-1qu1edy-0 jgHxgc"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD bUUoDN"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="16px"
        icon="accessTime"
        viewBox="0 0 24 24"
        width="16px"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
        <path
          d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="sc-AykKD bUUoDN"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="16px"
        icon="add"
        viewBox="0 0 24 24"
        width="16px"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="sc-AykKD bUUoDN"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="16px"
        icon="addCircleOutline"
        viewBox="0 0 24 24"
        width="16px"
      >
        <path
          d="M13 7h-2v4H7v2h4v4h2v-4h4v-2h-4V7zm-1-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="sc-AykKD bUUoDN"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="16px"
        icon="block"
        viewBox="0 0 24 24"
        width="16px"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM4 12c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L5.69 16.9C4.63 15.55 4 13.85 4 12zm8 8c-1.85 0-3.55-.63-4.9-1.69L18.31 7.1C19.37 8.45 20 10.15 20 12c0 4.42-3.58 8-8 8z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="sc-AykKD bUUoDN"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="16px"
        icon="building"
        viewBox="0 0 48 48"
        width="16px"
      >
        <path
          d="M24 14V6H4v36h40V14H24zM12 38H8v-4h4v4zm0-8H8v-4h4v4zm0-8H8v-4h4v4zm0-8H8v-4h4v4zm8 24h-4v-4h4v4zm0-8h-4v-4h4v4zm0-8h-4v-4h4v4zm0-8h-4v-4h4v4zm20 24H24v-4h4v-4h-4v-4h4v-4h-4v-4h16v20zm-4-16h-4v4h4v-4zm0 8h-4v4h4v-4z"
        />
      </svg>
      <svg
        class="sc-AykKD bUUoDN"
        focusable="false"
        height="16px"
        icon="loading"
        viewBox="0 0 38 38"
        width="16px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <linearGradient
            id="random-id-12"
            x1="8.042%"
            x2="65.682%"
            y1="0%"
            y2="23.865%"
          >
            <stop
              offset="0%"
              stop-color="currentColor"
              stop-opacity="0"
            />
            <stop
              offset="63.146%"
              stop-color="currentColor"
              stop-opacity=".631"
            />
            <stop
              offset="100%"
              stop-color="currentColor"
            />
          </linearGradient>
        </defs>
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <g
            transform="translate(1 1)"
          >
            <path
              d="M36 18c0-9.94-8.06-18-18-18"
              id="Oval-2"
              stroke="url(#random-id-12)"
              stroke-width="2"
            >
              <animateTransform
                attributeName="transform"
                dur="0.9s"
                from="0 18 18"
                repeatCount="indefinite"
                to="360 18 18"
                type="rotate"
              />
            </path>
            <circle
              cx="36"
              cy="18"
              fill="currentColor"
              r="1"
            >
              <animateTransform
                attributeName="transform"
                dur="0.9s"
                from="0 18 18"
                repeatCount="indefinite"
                to="360 18 18"
                type="rotate"
              />
            </circle>
          </g>
        </g>
      </svg>
    </div>
    <div
      class="Box-sc-1qu1edy-0 jgHxgc"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD bZVMDg"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="accessTime"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
        <path
          d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="sc-AykKD bZVMDg"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="add"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="sc-AykKD bZVMDg"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="addCircleOutline"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M13 7h-2v4H7v2h4v4h2v-4h4v-2h-4V7zm-1-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="sc-AykKD bZVMDg"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="block"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM4 12c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L5.69 16.9C4.63 15.55 4 13.85 4 12zm8 8c-1.85 0-3.55-.63-4.9-1.69L18.31 7.1C19.37 8.45 20 10.15 20 12c0 4.42-3.58 8-8 8z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="sc-AykKD bZVMDg"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="building"
        viewBox="0 0 48 48"
        width="24px"
      >
        <path
          d="M24 14V6H4v36h40V14H24zM12 38H8v-4h4v4zm0-8H8v-4h4v4zm0-8H8v-4h4v4zm0-8H8v-4h4v4zm8 24h-4v-4h4v4zm0-8h-4v-4h4v4zm0-8h-4v-4h4v4zm0-8h-4v-4h4v4zm20 24H24v-4h4v-4h-4v-4h4v-4h-4v-4h16v20zm-4-16h-4v4h4v-4zm0 8h-4v4h4v-4z"
        />
      </svg>
      <svg
        class="sc-AykKD bZVMDg"
        focusable="false"
        height="24px"
        icon="loading"
        viewBox="0 0 38 38"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <linearGradient
            id="random-id-13"
            x1="8.042%"
            x2="65.682%"
            y1="0%"
            y2="23.865%"
          >
            <stop
              offset="0%"
              stop-color="currentColor"
              stop-opacity="0"
            />
            <stop
              offset="63.146%"
              stop-color="currentColor"
              stop-opacity=".631"
            />
            <stop
              offset="100%"
              stop-color="currentColor"
            />
          </linearGradient>
        </defs>
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <g
            transform="translate(1 1)"
          >
            <path
              d="M36 18c0-9.94-8.06-18-18-18"
              id="Oval-2"
              stroke="url(#random-id-13)"
              stroke-width="2"
            >
              <animateTransform
                attributeName="transform"
                dur="0.9s"
                from="0 18 18"
                repeatCount="indefinite"
                to="360 18 18"
                type="rotate"
              />
            </path>
            <circle
              cx="36"
              cy="18"
              fill="currentColor"
              r="1"
            >
              <animateTransform
                attributeName="transform"
                dur="0.9s"
                from="0 18 18"
                repeatCount="indefinite"
                to="360 18 18"
                type="rotate"
              />
            </circle>
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Icon With accessibility title 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC krTeAh"
    >
      <svg
        aria-hidden="false"
        class="sc-AykKD bZVMDg"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="user"
        title="User account"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
        />
      </svg>
       This has a title attribute so it will be read by assistive devices.
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC krTeAh"
    >
      <svg
        aria-hidden="true"
        class="sc-AykKD bZVMDg"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="24px"
        icon="user"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
        />
      </svg>
       This doesn't have a title attribute, so it has aria-hidden set true instead.
    </div>
  </div>
</div>
`;

exports[`Storyshots Icon With added margin 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 fUpMMZ"
    >
      <div
        class="Box-sc-1qu1edy-0 eQeGVF"
        style="display:inline-block"
      >
        <svg
          aria-hidden="true"
          class="sc-AykKD hdBhAu"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="24px"
          icon="delete"
          m="x2"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
          />
        </svg>
      </div>
      <div
        class="Box-sc-1qu1edy-0 eQeGVF"
        style="display:inline-block"
      >
        <svg
          aria-hidden="true"
          class="sc-AykKD dajFaC"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="24px"
          icon="delete"
          mt="x2"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
          />
        </svg>
      </div>
      <div
        class="Box-sc-1qu1edy-0 eQeGVF"
        style="display:inline-block"
      >
        <svg
          aria-hidden="true"
          class="sc-AykKD fmDnJ"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="24px"
          icon="delete"
          mr="x2"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
          />
        </svg>
      </div>
      <div
        class="Box-sc-1qu1edy-0 eQeGVF"
        style="display:inline-block"
      >
        <svg
          aria-hidden="true"
          class="sc-AykKD msOsM"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="24px"
          icon="delete"
          mb="x2"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
          />
        </svg>
      </div>
      <div
        class="Box-sc-1qu1edy-0 eQeGVF"
        style="display:inline-block"
      >
        <svg
          aria-hidden="true"
          class="sc-AykKD keEYXW"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="24px"
          icon="delete"
          ml="x2"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
          />
        </svg>
      </div>
      <div
        class="Box-sc-1qu1edy-0 eQeGVF"
        style="display:inline-block"
      >
        <svg
          aria-hidden="true"
          class="sc-AykKD eeVhyb"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="24px"
          icon="delete"
          mx="x2"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
          />
        </svg>
      </div>
      <div
        class="Box-sc-1qu1edy-0 eQeGVF"
        style="display:inline-block"
      >
        <svg
          aria-hidden="true"
          class="sc-AykKD gdEtFu"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="24px"
          icon="delete"
          my="x2"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
